fixed spacing on code blocks

--- a/static/scss/index.scss
+++ b/static/scss/index.scss
@@ -15,6 +15,9 @@ body {
 pre {
   border: unset;
   overflow: hidden;
+  // TODO can this spacing be better?
+  margin: unset;
+  padding: unset;
 }
 
 table {
